# TIN-Project

./: .gitignore
Common/: NetworkUtils.cpp  NetworkUtils.h  SystemUtils.cpp  SystemUtils.h
Server/: .gitignore  CMakeLists.txt  server.sln  server.vcxproj  server.vcxproj.filters
Server/src/: BytesParser.h  DatabaseManager.cpp  DatabaseManager.h  IDatabaseManager.h  ISensorConnectionHandler.cpp  ISensorConnectionHandler.h  main.cpp
