cmake_minimum_required(VERSION 3.15)
project(server)
set(CMAKE_CXX_STANDARD 20)


#include_directories(server C:/Users/alexe/Desktop/SQLAPI/include)
include_directories(server C:/oracle/instantclient_12_2/sdk/include)
#link_directories(server C:/Users/alexe/Desktop/SQLAPI/lib)
link_directories(server C:/oracle/instantclient_12_2/sdk/lib/msvc)
add_executable(server src/main.cpp src/SensorConnectionHandler.cpp src/ConnectionsManager.cpp src/ISensorConnectionHandler.cpp src/DatabaseManager.cpp ../Common/ConnectionException.cpp ../Common/NetworkUtils.cpp)
if(WIN32)
    target_link_libraries(server wsock32 ws2_32)
endif()

#find_library(OCCI C:/oracle/instantclient_19_6/sdk/lib/msvc/oci)

#target_link_libraries(server C:/Users/alexe/Desktop/SQLAPI/lib/sqlapi.lib)
#target_link_libraries(server C:/Users/alexe/Desktop/SQLAPI/lib/sqlapid.lib)
#target_link_libraries(server C:/Users/alexe/Desktop/SQLAPI/lib/sqlapis.lib)
#target_link_libraries(server C:/Users/alexe/Desktop/SQLAPI/lib/sqlapisd.lib)
target_link_libraries(server C:/oracle/instantclient_12_2/sdk/lib/msvc/oraocci12.lib)
target_link_libraries(server C:/oracle/instantclient_12_2/sdk/lib/msvc/oraocci12d.lib)
target_link_libraries(server C:/oracle/instantclient_12_2/sdk/lib/msvc/oci.lib)
#target_link_libraries(server C:/oracle/instantclient_12_2/sdk/lib/msvc/oci.lib)
#target_link_libraries(server C:/oracle/instantclient_12_2/sdk/lib/msvc/oraocci12.lib)
#target_link_libraries(server C:/app/alexe/product/12.2.0/dbhome_1/oci/lib/msvc/oci.lib)
#target_link_libraries(server C:/app/alexe/product/12.2.0/dbhome_1/oci/lib/msvc/ociw32.lib)
#target_link_libraries(server C:/oracle/instantclient_19_6/sdk/lib/msvc/oraocci19d.lib)
#target_link_libraries(server C:/oracle/instantclient_19_6/sdk/lib/msvc/oci19.lib)

#link_libraries(C:/Users/alexe/Desktop/SQLAPI/lib/)
#add_library(libsqlapiddll.a C:/Users/alexe/Desktop/SQLAPI/lib/)
#add_library(mylib STATIC C:/Users/alexe/Desktop/SQLAPI/lib/libsqlapi.lib)
#target_link_libraries(server C:/Users/alexe/Desktop/SQLAPI/lib/libsqlapiddll.a)
#target_link_libraries(server ${mylib})

#find_library(ZMIENNA C:\\Users\\alexe\\Desktop\\SQLAPI\\lib\\libsqlapiddll.a)
#find_library(ZMIENNA2 C:\\Users\\alexe\\Desktop\\SQLAPI\\lib\\libsqlapiddll.a)
#find_library(CHUJ C:\\Users\\alexe\\Desktop\\SQLAPI\\lib\\libsqlapi.a)
#target_link_libraries(server ${ZMIENNA})
#target_link_libraries(server ${ZMIENNA2})
#target_link_libraries(server ${ZMIENNA2})